--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
     "framer-motion": "^12.0.6",
+    "js-file-download": "^0.4.12",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.474.0",
     "mongoose": "^8.9.6",
