--- a/package.json
+++ b/package.json
@@ -13,22 +13,28 @@
     "@next/font": "^14.2.15",
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
+    "docxtemplater": "^3.59.0",
+    "file-saver": "^2.0.5",
     "framer-motion": "^12.0.6",
     "js-file-download": "^0.4.12",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.474.0",
+    "mammoth": "^1.9.0",
     "mongoose": "^8.9.6",
     "next": "15.1.6",
     "nodemailer": "^6.10.0",
     "openai": "^4.82.0",
+    "pizzip": "^3.1.8",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
-    "react-icons": "^5.4.0"
+    "react-icons": "^5.4.0",
+    "react-signature-canvas": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/bcryptjs": "^2.4.6",
+    "@types/file-saver": "^2.0.7",
     "@types/jsonwebtoken": "^9.0.8",
     "@types/jwt-decode": "^3.1.0",
     "@types/next": "^9.0.0",
@@ -36,6 +42,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-signature-canvas": "^1.0.6",
     "autoprefixer": "^10.4.20",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
